# node-napi-rs-jwt

./: ReadMe.md  jwt-key-gen.sh
bentch-node-jwt/: package-lock.json  package.json
bentch-node-jwt/src/: test.ts
keys/: jwtES256.key  jwtES256.pkcs8.pem  jwtES256.pub
napi-jwt/: Cargo.toml  index.d.ts  index.js
napi-jwt/src/: lib.rs
