[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
napi        = "2"
napi-derive = "2"
serde = "1.0.188"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
